FIX: delete horizontal scroll bar

--- a/source/sass/index/example.scss
+++ b/source/sass/index/example.scss
@@ -25,6 +25,7 @@
   @media (min-width: $desktop-width) {
     width: 1220px;
     margin: 0 auto;
+    padding: 0;
   }
 
   &--title,
@@ -54,6 +55,8 @@
   }
 
   &--slider {
+    padding: 0;
+
     @media (min-width: $desktop-width) {
       width: 690px;
       margin: 0;
