--- a/source/sass/index/slider.scss
+++ b/source/sass/index/slider.scss
@@ -14,8 +14,6 @@
 }
 
 .slider__image {
-  margin-left: -20px;
-
   @media (min-width: $tablet-width) {
     margin-left: 0;
   }
